Stylesheet/emote/tag updates 2014-05-04

--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -1,8 +1,7 @@
 /*** Emotes ***/
 
 /* 100 by 100 */
-
-a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/bonghost"], a[href="/flutterghost"], a[href="/lyraghost"], a[href="/ppsoawesomeghost"], a[href="/pinkieghost"], a[href="/rdsoawesomeghost"], a[href="/rarisoawesomeghost"], [href="/rarghost"], a[href="/roseghost"], a[href="/shysoawesomeghost"], a[href="/sweetieghost"], a[href="/twisoawesomeghost"], a[href="/vinylghost"]{
+a[href="/ajcheersghost"], a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/applejackfillyghost"], a[href="/bonghost"], a[href="/flutterghost"], a[href="/lyraghost"], a[href="/pinkiefillyghost"], a[href="/pinkieghost"], a[href="/ppsoawesomeghost"], a[href="/raracheeksghost"], a[href="/rarghost"], a[href="/rarisoawesomeghost"], a[href="/rdsoawesomeghost"], a[href="/roseghost"], a[href="/shysoawesomeghost"], a[href="/sweetieghost"], a[href="/twigringhost"], a[href="/twilightfillyghost"], a[href="/twishockedghost"], a[href="/twisoawesomeghost"], a[href="/vinylghost"]{
     display: block;
     clear: none;
     float: left;
@@ -11,25 +10,32 @@ a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/bonghost"], a[href="/f
     background-image: url(%%ghostemotes1%%) !important
 }
 
-a[href="/ajghost"]{ background-position: -5px -5px; width: 100px; height: 100px; }
-a[href="/ajsoawesomeghost"] {width: 83px; height: 100px; background-position: -115px -5px;}
-a[href="/bonghost"]{ background-position: -208px -5px; width: 100px; height: 113px; }
-a[href="/flutterghost"]{ background-position: -318px -5px; width: 100px; height: 85px; }
-a[href="/lyraghost"]{ background-position: -318px -100px; width: 100px; height: 114px; }
-a[href="/ppsoawesomeghost"] {width: 96px; height: 100px; background-position: -5px -224px;}
-a[href="/pinkieghost"]{ background-position: -111px -224px; width: 100px; height: 118px; }
-a[href="/rdsoawesomeghost"] {width: 101px; height: 100px; background-position: -221px -224px;}
-a[href="/rarisoawesomeghost"] {width: 98px; height: 100px; background-position: -428px -5px;}
-a[href="/rarghost"]{ background-position: -428px -115px; width: 100px; height: 114px; }
-a[href="/roseghost"]{ background-position: -332px -239px; width: 100px; height: 130px; }
-a[href="/shysoawesomeghost"] {width: 100px; height: 100px; background-position: -5px -375px;}
-a[href="/sweetieghost"]{background-position: -5px -115px; width: 100px; height: 96px;}
-a[href="/twisoawesomeghost"] {width: 95px; height: 100px; background-position: -115px -375px;}
-a[href="/vinylghost"]{ background-position: -220px -375px; width: 100px; height: 95px; }
+a[href="/ajcheersghost"] {width: 91px; height: 70px; background-position: -5px -5px;}
+a[href="/ajghost"] { width: 100px; height: 100px; background-position: -106px -5px;}
+a[href="/ajsoawesomeghost"] { width: 83px; height: 100px; background-position: -216px -5px;}
+a[href="/applejackfillyghost"] { width: 100px; height: 105px; background-position: -309px -5px;}
+a[href="/bonghost"] {width: 100px; height: 113px; background-position: -5px -120px;}
+a[href="/flutterghost"] { width: 100px; height: 85px; background-position: -115px -120px;}
+a[href="/lyraghost"] { width: 100px; height: 114px; background-position: -225px -120px;}
+a[href="/pinkiefillyghost"] { width: 112px; height: 105px; background-position: -335px -120px;}
+a[href="/pinkieghost"] { width: 100px; height: 118px; background-position: -115px -235px;}
+a[href="/ppsoawesomeghost"] { width: 96px; height: 100px; background-position: -419px -5px;}
+a[href="/raracheeksghost"] {width: 100px; height: 115px; background-position: -335px -235px;}
+a[href="/rarghost"] { width: 100px; height: 114px; background-position: -5px -360px;}
+a[href="/rarisoawesomeghost"] { width: 98px; height: 100px; background-position: -225px -360px;}
+a[href="/rdsoawesomeghost"] { width: 101px; height: 100px; background-position: -333px -360px;}
+a[href="/roseghost"] { width: 100px; height: 126px; background-position: -525px -5px;}
+a[href="/shysoawesomeghost"] { width: 100px; height: 100px; background-position: -457px -141px;}
+a[href="/sweetieghost"] { width: 100px; height: 96px; background-position: -5px -251px;}
+a[href="/twigringhost"] { width: 90px; height: 91px; background-position: -225px -251px; }
+a[href="/twilightfillyghost"] { width: 100px; height: 105px; background-position: -445px -251px;}
+a[href="/twishockedghost"] { width: 100px; height: 110px; background-position: -115px -366px;}
+a[href="/twisoawesomeghost"] {width: 95px; height: 100px; background-position: -444px -366px; }
+a[href="/vinylghost"] { width: 100px;  height: 95px; background-position: -225px -476px;}
 
 /* 100 by 200 */
 
-a[href="/dashghost"], a[href="/flitterghost"], a[href="/tavighost"], a[href="/trixieghost"], a[href="/twighost"]{
+a[href="/ajcozyghost"], a[href="/cozyfireghost"], a[href="/dashcozyghost"], a[href="/dashghost"], a[href="/derpycozyghost"], a[href="/flitterghost"], a[href="/fluttercozyghost"], a[href="/lunacozyghost"], a[href="/lyracozyghost"], a[href="/pinkiecozyghost"], a[href="/raritycozyghost"], a[href="/tavighost"], a[href="/trixiecozyghost"], a[href="/trixieghost"], a[href="/twicozyghost"], a[href="/twighost"], a[href="/vinylcozyghost"] {
     display: block;
     clear: none;
     float: left;
@@ -37,52 +43,84 @@ a[href="/dashghost"], a[href="/flitterghost"], a[href="/tavighost"], a[href="/tr
     height: 200px;
     background-image: url(%%ghostemotes2%%) !important
 }
-
-a[href="/dashghost"]{ background-position: -5px -5px; width: 100px; height: 158px; }
-a[href="/flitterghost"]{ background-position: -115px -5px; width: 100px; height: 213px; }
-a[href="/tavighost"]{ background-position: -215px -5px; width: 100px; height: 195px;}
-a[href="/trixieghost"]{ background-position: -325px -5px; width: 100px; height: 190px;}
-a[href="/twighost"]{ background-position: -5px -205px; width: 100px; height: 219px;}
+a[href="/ajcozyghost"] {width: 103px; height: 220px; background-position: -5px -5px;}
+a[href="/cozyfireghost"] {width: 110px; height: 220px; background-position: -118px -5px;}
+a[href="/dashcozyghost"] { width: 132px; height: 220px; background-position: -238px -5px;}
+a[href="/dashghost"] {width: 100px; height: 158px; background-position: -380px -5px;}
+a[href="/derpycozyghost"] { width: 123px; height: 220px; background-position: -490px -5px;}
+a[href="/flitterghost"] { width: 90px; height: 213px; background-position: -5px -235px;}
+a[href="/fluttercozyghost"] {width: 127px; height: 220px; background-position: -105px -235px;}
+a[href="/lunacozyghost"] {width: 98px; height: 220px; background-position: -242px -235px;}
+a[href="/lyracozyghost"] {width: 114px; height: 220px; background-position: -350px -235px;}
+a[href="/pinkiecozyghost"] {width: 119px; height: 220px; background-position: -474px -235px;}
+a[href="/raritycozyghost"] {width: 120px; height: 220px; background-position: -623px -5px;}
+a[href="/tavighost"] { width: 100px; height: 195px; background-position: -603px -235px;}
+a[href="/trixiecozyghost"] { width: 117px; height: 220px; background-position: -603px -440px;}
+a[href="/trixieghost"] { width: 100px; height: 190px; background-position: -5px -670px;}
+a[href="/twicozyghost"] { width: 100px; height: 220px; background-position: -115px -670px;}
+a[href="/twighost"] { width: 100px; height: 219px; background-position: -225px -670px;}
+a[href="/vinylcozyghost"] { width: 99px; height: 220px; background-position: -335px -670px;}
 
 /* 150 by 100 */
 
-a[href="/twidashghosts"] {
-    background-position: 0px 0px;
-    Display: block;
-    Clear: none;
-    Float: left;
-    Width: 150px;
-    Height: 100px;
-    background-image: url(%%twidashghosts%%)
+a[href="/dashiefillyghost"], a[href="/fluttershyfillyghost"], a[href="/rarityfillyghost"], a[href="/twidashghosts"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 100px;
+    background-image: url(%%ghostemotes4%%) !important
 }
+a[href="/dashiefillyghost"] { width: 177px;  height: 105px; background-position: -5px -5px;}
+a[href="/fluttershyfillyghost"] { width: 121px; height: 105px; background-position: -5px -120px;}
+a[href="/rarityfillyghost"] { width: 124px; height: 105px; background-position: -192px -5px;}
+a[href="/twidashghosts"] { width: 150px; height: 100px; background-position: -136px -120px;}
+
 
 /* 130 by 150 */
-a[href="/cadghost"], a[href="/fillylunaghost"], a[href="/fillytiaghost"], a[href="/shiningghost"]{
+a[href="/cadghost"], a[href="/fillylunaghost"] ,a[href="/fillytiaghost"], a[href="/shiningghost"], a[href="/twidrugsghost"], a[href="/twiworriedghost"] {
     display: block;
     clear: none;
     float: left;
     width: 130px;
     height: 150px;
     background-image: url(%%ghostemotes3%%) !important 
-} 
+}
+a[href="/cadghost"] { width: 123px; height: 150px; background-position: -5px -5px;}
+a[href="/fillylunaghost"] { width: 133px; height: 150px; background-position: -138px -5px;}
+a[href="/fillytiaghost"] { width: 140px; height: 150px; background-position: -5px -165px;}
+a[href="/shiningghost"] {width: 123px; height: 150px; background-position: -155px -165px;}
+a[href="/twidrugsghost"] {width: 127px; height: 150px; background-position: -281px -5px;}
+a[href="/twiworriedghost"] { width: 123px; height: 150px; background-position: -288px -165px;}
 
-a[href="/cadghost"]{ background-position: 0 0; width: 123px; height: 150px; } 
-a[href="/fillylunaghost"]{ background-position: 0 -300px; width: 133px; height: 150px; } 
-a[href="/fillytiaghost"]{ background-position: 0 -600px; width: 140px; height: 150px; } 
-a[href="/shiningghost"]{ background-position: 0 -900px; width: 123px; height: 150px; }
+/* 150 by 150 */
+a[href="/ajsaluteghost"], a[href="/bendoverghost"]{
+   display: block;
+   clear: none;
+   float: left;
+   width: 150px;
+   height: 150px;
+   background-image: url(%%ghostemotes5%%) !important
+}
+
+a[href="/ajsaluteghost"] {width: 149px; height: 150px; background-position: -5px -5px;}
+a[href="/bendoverghost"] {width: 152px; height: 157px; background-position: -164px -5px;}
 
 /* 200 by 150 */
-a[href="/lunaghost"], a[href="/tiaghost"] {
+a[href="/derpysaluteghost"], a[href="/fluttershysaluteghost"], a[href="/lunaghost"], a[href="/tiaghost"], a[href="/twisaluteghost"] {   
     display: block;
     clear: none;
     float: left;
     width: 200px;
     height: 150px;
-    background-image: url(%%ghostemotes4%%) !important 
-} 
+    background-image: url(%%ghostemotes6%%) !important 
+}
+a[href="/derpysaluteghost"] {width: 185px;  height: 150px; background-position: -5px -5px;}
+a[href="/fluttershysaluteghost"] {width: 174px; height: 150px; background-position: -200px -5px;}
+a[href="/lunaghost"] {width: 227px; height: 150px; background-position: -5px -165px;}
+a[href="/tiaghost"] { width: 193px; height: 150px; background-position: -384px -5px;}
+a[href="/twisaluteghost"] {width: 221px; height: 150px; background-position: -242px -165px;}
 
-a[href="/lunaghost"]{ background-position: 0 0; width: 227px; height: 150px; } 
-a[href="/tiaghost"]{ background-position: 0 -300px; width: 193px; height: 150px; } 
 
 /* Ghost Emotes Fun*/
 a[href="/ajfunghost"], a[href="/derpfunghost"], a[href="/shyfunghost"], a[href="/lyrafunghost"], a[href="/ppfunghost"], a[href="/rarfunghost"], a[href="/dashfunghost"], a[href="/rosefunghost"], a[href="/surfunghost"], a[href="/trixfunghost"], a[href="/twifunghost"]{
@@ -107,24 +145,24 @@ a[href="/trixfunghost"] {width: 261px; height: 150px; background-position: -498p
 a[href="/twifunghost"] {width: 228px; height: 150px; background-position: -534px -325px;}
 
 /* 100 by 140 */
-a[href="/cheekyajghost"], a[href="/cheekyshyghost"], a[href="/cheekyppghost"], a[href="/cheekyraraghost"], a[href="/cheekydashghost"], a[href="/cheekyscootsghost"], a[href="/cheekytwighost"]{
+a[href="/appleghost"], a[href="/cheekydaringdoghost"], a[href="/cheekyvsghost"], a[href="/fsghost"], a[href="/ppghost"], a[href="/rarityghost"], a[href="/rdghost"], a[href="/scootaghost"], a[href="/twilightghost"]{
     display: block;
     clear: none;
     float: left;
     width: 100px;
     height: 140px;
-    background-image: url(%%ghostemotes5%%) !important
+    background-image: url(%%ghostemotes7%%) !important
 }
+a[href="/appleghost"] { width: 100px; height: 140px; background-position: -5px -5px;}
+a[href="/cheekydaringdoghost"] { width: 100px; height: 104px; background-position: -115px -5px;}
+a[href="/cheekyvsghost"] { width: 100px; height: 128px; background-position: -225px -5px;}
+a[href="/fsghost"] { width: 100px; height: 137px; background-position: -115px -143px;}
+a[href="/ppghost"] {width: 100px; height: 134px; background-position: -225px -143px;}
+a[href="/rarityghost"] { width: 100px; height: 137px; background-position: -335px -5px;}
+a[href="/rdghost"] { width: 100px; height: 125px; background-position: -335px -152px;}
+a[href="/scootaghost"] { width: 100px; height: 141px; background-position: -5px -287px;}
+a[href="/twilightghost"] { width: 100px; height: 131px; background-position: -225px -287px;}
 
-a[href="/cheekyajghost"] {width: 100px; height: 140px; background-position: -5px -5px;}
-a[href="/cheekyshyghost"] {width: 100px; height: 137px; background-position: -115px -5px;}
-a[href="/cheekyppghost"] {width: 100px; height: 134px; background-position: -225px -5px;}
-a[href="/cheekyraraghost"] {width: 100px; height: 137px; background-position: -225px -149px;}
-a[href="/cheekydashghost"] {width: 100px; height: 125px; background-position: -335px -5px;}
-a[href="/cheekyscootsghost"] {width: 100px; height: 141px; background-position: -335px -140px;}
-a[href="/cheekytwighost"] {width: 100px; height: 131px; background-position: -5px -291px;}
-
- 
 /*      
 
 Current color scheme references:
