--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -668,6 +668,15 @@ background-image:url(%%sheet14%%);
 background-position: 0px -397px;
 }
 
+a[href|="/egochaser"] {
+float:left;
+width:160px;
+height:159px;
+background-repeat:no-repeat;
+background-image:url(%%sheet14%%);
+background-position: -224px -400px;
+}
+
 /*stylesheet1 "sheet14" end*/
 
 /*un-assigned*/
