--- a/source-css/hugemotes.css
+++ b/source-css/hugemotes.css
@@ -76,8 +76,12 @@ a[href|="/lyrabonkiss"], a[href|="/pinkapinkkiss"], a[href|="/pinkiedashkiss"], 
 {background-image:url(%%misfits4a%%);display:block;float:left;}
 
 /* Misfits 5 a */
-a[href|="/raritypiebrush"], a[href|="/berrygrouphug"], a[href|="/raritavikiss"], a[href|="/raripiesnuzzle"], a[href|="/rarilunasleep"], a[href|="/flutterraresnuzzle"], a[href|="/ararefluttermachug"]
+a[href|="/raritypiebrush"], a[href|="/berrygrouphug"], a[href|="/raritavikiss"], a[href|="/raripiesnuzzle"], a[href|="/rarilunasleep"], a[href|="/flutterraresnuzzle"], a[href|="/ararefluttermachug"], a[href|="/rarityspikehug"], a[href|="/flutterdashsmooch"]
 {background-image:url(%%misfits5a%%);display:block;float:left;}
+
+/* Misfits 6 a */
+a[href|="/flutterdashcloud"]
+{background-image:url(%%misfits6a%%);display:block;float:left;}
 
 /* Animated Emotes */
 a[href|="/zilean"] {background-image: url(%%Zilean%%);width:345px;height:250px;display:block;float:left;}
@@ -129,3 +133,6 @@ a[href|="/raripiesnuzzle"] {width:250px;height:206px;background-position: -250px
 a[href|="/rarilunasleep"] {width:250px;height:186px;background-position: 0px -358px;}
 a[href|="/flutterraresnuzzle"] {width:250px;height:165px;background-position: -250px -400px;}
 a[href|="/ararefluttermachug"] {width:288px;height:160px;background-position: 0px -565px;}
+a[href|="/rarityspikehug"] {width:250px;height:196px;background-position: 0px -725px;}
+a[href|="/flutterdashsmooch"] {width:206px;height:300px;background-position: -294px -565px;}
+a[href|="/flutterdashcloud"] {width:250px;height:162px;}
