--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -499,7 +499,16 @@ a[href|="/twifinger"] {
     height: 200px;
     background-image: url(%%Twifinger%%) !important
     }
-
+a[href|="/celdevious"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 291px;
+    height: 200px;
+    background-position: -201px -0px;
+    background-image: url(%%celcreep%%) !important
+    
+    }
 a[href|="/hathe"] {
     display: block;
     clear: none;
@@ -777,6 +786,14 @@ a[href|="/ppdude"] {
     width: 150px;
     height: 150px;
     background-image: url(%%PPDude%%) !important
+    }
+a[href|="/twiweep"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 136px;
+    height: 150px;
+    background-image: url(%%twiweep%%) !important
     }
 a[href|="/ppexcite"] {
     display: block;
