--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -98,7 +98,7 @@ Height: 70px;
 background-image: url(%%rdwut%%) !important
 }
 
-a[href="/trufflepaper"] {
+a[href="/trufflepaper"],a[href="/trufflenews"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
